# isa-test

./: CMakeLists.txt
erasure_code/: ec_base.c  ec_base_aliases.c  ec_highlevel_func.c  gf_2vect_dot_prod_avx2.asm  gf_3vect_dot_prod_avx2.asm  gf_4vect_dot_prod_avx2.asm
erasure_code/aarch64/: ec_aarch64_highlevel_func.c
examples/ec/: MobaXterm_192.168.1.13hadoop_20210510_125110.rtf  ec_piggyback_example.c  ec_simple_example.c
include/: erasure_code.h
isa-l-master/crc/: crc64_example  crc_simple_test
isa-l-master/erasure_code/: ec_base.h.gch
isa-l-master/erasure_code/ppc64le/: ec_base_vsx.c
isa-l-master/examples/ec/: cauchy_3_3.txt  cauchy_3_3_no.txt  cauchy_4_4.txt  cauchy_4_4_no.txt  cauchy_5_5.txt  cauchy_5_5_no.txt  cauchy_6_6.txt  cauchy_6_6_no.txt  cauchy_7_7.txt  cauchy_7_7_no.txt  cauchy_8_8.txt  cauchy_8_8_no.txt  data.txt  data10_4.txt  data10_4_sse.txt  data3_2_sse.txt  data4_2.txt  data4_2_sse.txt  data6_3.txt  data6_3_sse.txt  ec_piggyback_example  ec_simple_example  ini_3_3.txt
isa-l-master/generated_doc/html/: annotated.html  annotated.js  classes.html  crc64_8h.html  crc64_8h.js  crc64_8h_source.html  crc_8h.html  crc_8h.js  crc_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  erasure__code_8h.html  erasure__code_8h.js  erasure__code_8h_source.html  files.html  files.js  functions.html  functions_vars.html  gf__vect__mul_8h.html  gf__vect__mul_8h.js  gf__vect__mul_8h_source.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  igzip__lib_8h.html  igzip__lib_8h.js  igzip__lib_8h_source.html  index.html  isa-l_8h.html  isa-l_8h_source.html  md_CONTRIBUTING.html  md_Release_notes.html  md_doc_build.html  md_doc_test.html  mem__routines_8h.html  mem__routines_8h.js  mem__routines_8h_source.html  navtree.js  navtreeindex0.js  navtreeindex1.js  (+25 more)
isa-l-master/generated_doc/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6d.js  all_72.js  all_73.js  all_74.js  all_76.js  all_78.js  classes_62.js  classes_69.js  enums_69.js  enumvalues_7a.js  files_63.js  files_65.js  files_67.js  files_69.js  files_6d.js  files_72.js  functions_63.js  functions_65.js  functions_67.js  functions_69.js  functions_70.js  functions_78.js  pages_63.js  pages_69.js  search.js  variables_62.js  variables_63.js  variables_65.js  variables_67.js  variables_68.js  variables_69.js  variables_6c.js  (+5 more)
isa-l-master/generated_doc/latex/: annotated.tex  crc64_8h.tex  crc64_8h_source.tex  crc_8h.tex  crc_8h_source.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  erasure__code_8h.tex  erasure__code_8h_source.tex  files.tex  gf__vect__mul_8h.tex  gf__vect__mul_8h_source.tex  igzip__lib_8h.tex  igzip__lib_8h_source.tex  index.tex  isa-l_8h.tex  isa-l_8h_source.tex  md_CONTRIBUTING.tex  md_Release_notes.tex  md_doc_build.tex  md_doc_test.tex  mem__routines_8h.tex  mem__routines_8h_source.tex  raid_8h.tex  raid_8h_source.tex  refman.tex  requires.tex  structBitBuf2.tex  structinflate__huff__code__large.tex  structinflate__huff__code__small.tex  structinflate__state.tex  structisal__dict.tex  structisal__gzip__header.tex  structisal__huff__histogram.tex  structisal__hufftables.tex  structisal__mod__hist.tex  structisal__zlib__header.tex  structisal__zstate.tex  structisal__zstream.tex
isa-l-master/igzip/: igzip_example  igzip_sync_flush_example
isa-l-master/include/: erasure_code.h.gch
isa-l-master/raid/: xor_example
