cmake_minimum_required(VERSION 3.17)
project(isa_l_master C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_FLAGS -pthread)

include_directories(crc)
include_directories(crc/aarch64)
include_directories(erasure_code)
include_directories(erasure_code/ppc64le)
include_directories(igzip)
include_directories(igzip/aarch64)
include_directories(include)

add_executable(isa_l_master
        crc/aarch64/crc32_aarch64_common.h
        crc/aarch64/crc32_gzip_refl_pmull.h
        crc/aarch64/crc32_ieee_norm_pmull.h
        crc/aarch64/crc32_iscsi_refl_pmull.h
        crc/aarch64/crc32_norm_common_pmull.h
        crc/aarch64/crc32_refl_common_pmull.h
        crc/aarch64/crc64_ecma_norm_pmull.h
        crc/aarch64/crc64_ecma_refl_pmull.h
        crc/aarch64/crc64_iso_norm_pmull.h
        crc/aarch64/crc64_iso_refl_pmull.h
        crc/aarch64/crc64_jones_norm_pmull.h
        crc/aarch64/crc64_jones_refl_pmull.h
        crc/aarch64/crc64_norm_common_pmull.h
        crc/aarch64/crc64_refl_common_pmull.h
        crc/aarch64/crc_aarch64_dispatcher.c
        crc/aarch64/crc_common_pmull.h
        crc/crc16_t10dif_copy_perf.c
        crc/crc16_t10dif_copy_test.c
        crc/crc16_t10dif_op_perf.c
        crc/crc16_t10dif_perf.c
        crc/crc16_t10dif_test.c
        crc/crc32_funcs_test.c
        crc/crc32_gzip_refl_perf.c
        crc/crc32_ieee_perf.c
        crc/crc32_iscsi_perf.c
        crc/crc64_base.c
        crc/crc64_example.c
        crc/crc64_funcs_perf.c
        crc/crc64_funcs_test.c
        crc/crc64_ref.h
        crc/crc_base.c
        crc/crc_base_aliases.c
        crc/crc_ref.h
        crc/crc_simple_test.c
        erasure_code/aarch64/ec_aarch64_dispatcher.c
        erasure_code/aarch64/ec_aarch64_highlevel_func.c
        erasure_code/ppc64le/ec_base_vsx.c
        erasure_code/ppc64le/ec_base_vsx.h
        erasure_code/ppc64le/gf_2vect_dot_prod_vsx.c
        erasure_code/ppc64le/gf_2vect_mad_vsx.c
        erasure_code/ppc64le/gf_3vect_dot_prod_vsx.c
        erasure_code/ppc64le/gf_3vect_mad_vsx.c
        erasure_code/ppc64le/gf_4vect_dot_prod_vsx.c
        erasure_code/ppc64le/gf_4vect_mad_vsx.c
        erasure_code/ppc64le/gf_5vect_dot_prod_vsx.c
        erasure_code/ppc64le/gf_5vect_mad_vsx.c
        erasure_code/ppc64le/gf_6vect_dot_prod_vsx.c
        erasure_code/ppc64le/gf_6vect_mad_vsx.c
        erasure_code/ppc64le/gf_vect_dot_prod_vsx.c
        erasure_code/ppc64le/gf_vect_mad_vsx.c
        erasure_code/ppc64le/gf_vect_mul_vsx.c
        erasure_code/ec_base.c
        erasure_code/ec_base.h
        erasure_code/ec_base_aliases.c
        erasure_code/ec_highlevel_func.c
        erasure_code/erasure_code_base_perf.c
        erasure_code/erasure_code_base_test.c
        erasure_code/erasure_code_perf.c
        erasure_code/erasure_code_test.c
        erasure_code/erasure_code_update_perf.c
        erasure_code/erasure_code_update_test.c
        erasure_code/gen_rs_matrix_limits.c
        erasure_code/gf_inverse_test.c
        erasure_code/gf_vect_dot_prod_1tbl.c
        erasure_code/gf_vect_dot_prod_base_test.c
        erasure_code/gf_vect_dot_prod_perf.c
        erasure_code/gf_vect_dot_prod_test.c
        erasure_code/gf_vect_mad_test.c
        erasure_code/gf_vect_mul_base_test.c
        erasure_code/gf_vect_mul_perf.c
        erasure_code/gf_vect_mul_test.c
        examples/ec/ec_piggyback_example.c
        examples/ec/ec_simple_example.c
        igzip/aarch64/bitbuf2_aarch64.h
        igzip/aarch64/data_struct_aarch64.h
        igzip/aarch64/huffman_aarch64.h
        igzip/aarch64/igzip_multibinary_aarch64_dispatcher.c
        igzip/aarch64/lz0a_const_aarch64.h
        igzip/aarch64/options_aarch64.h
        igzip/aarch64/stdmac_aarch64.h
        igzip/adler32_base.c
        igzip/adler32_perf.c
        igzip/bitbuf2.h
        igzip/checksum32_funcs_test.c
        igzip/checksum_test_ref.h
        igzip/encode_df.c
        igzip/encode_df.h
        igzip/flatten_ll.c
        igzip/flatten_ll.h
        igzip/generate_custom_hufftables.c
        igzip/generate_static_inflate.c
        igzip/huff_codes.c
        igzip/huff_codes.h
        igzip/huffman.h
        igzip/hufftables_c.c
        igzip/igzip.c
        igzip/igzip_base.c
        igzip/igzip_base_aliases.c
        igzip/igzip_build_hash_table_perf.c
        igzip/igzip_checksums.h
        igzip/igzip_example.c
        igzip/igzip_file_perf.c
        igzip/igzip_hist_perf.c
        igzip/igzip_icf_base.c
        igzip/igzip_icf_body.c
        igzip/igzip_inflate.c
        igzip/igzip_inflate_test.c
        igzip/igzip_level_buf_structs.h
        igzip/igzip_perf.c
        igzip/igzip_rand_test.c
        igzip/igzip_semi_dyn_file_perf.c
        igzip/igzip_sync_flush_example.c
        igzip/igzip_wrapper.h
        igzip/igzip_wrapper_hdr_test.c
        igzip/inflate_std_vects.h
        igzip/proc_heap_base.c
        igzip/repeated_char_result.h
        igzip/static_inflate.h
        include/aarch64_multibinary.h
        include/crc.h
        include/crc64.h
        include/erasure_code.h
        include/gf_vect_mul.h
        include/igzip_lib.h
        include/mem_routines.h
        include/raid.h
        include/test.h
        include/types.h
        include/unaligned.h
        mem/aarch64/mem_aarch64_dispatcher.c
        mem/mem_zero_detect_base.c
        mem/mem_zero_detect_base_aliases.c
        mem/mem_zero_detect_perf.c
        mem/mem_zero_detect_test.c
        programs/igzip_cli.c
        raid/aarch64/raid_aarch64_dispatcher.c
        raid/pq_check_test.c
        raid/pq_gen_perf.c
        raid/pq_gen_test.c
        raid/raid_base.c
        raid/raid_base_aliases.c
        raid/xor_check_test.c
        raid/xor_example.c
        raid/xor_gen_perf.c
        raid/xor_gen_test.c
        tests/fuzz/igzip_checked_inflate_fuzz_test.c
        tests/fuzz/igzip_dump_inflate_corpus.c
        tests/fuzz/igzip_fuzz_inflate.c
        tests/fuzz/igzip_simple_inflate_fuzz_test.c
        tests/fuzz/igzip_simple_round_trip_fuzz_test.c)
